revise intro (adding sub-headings)

--- a/README.Rmd
+++ b/README.Rmd
@@ -47,14 +47,17 @@ library(unikn)  # load package
 </a> 
 -->
 
-<!-- ## Enabling corporate design elements in\ R  -->
+### Enabling corporate design elements in\ R {-}
 
-The **unikn** package enables corporate design elements in\ R. 
-It provides useful color functionality ---\ by defining dedicated colors and color palettes, and functions for finding, changing, viewing, and using them\ --- and styled text elements (e.g., for marking, underlining, or plotting colored titles) in\ [R](https://www.r-project.org/). 
+<!-- The **unikn** package enables corporate design elements in\ R. It... -->
+
+The **unikn** package provides useful color functionality ---\ by defining dedicated colors and color palettes, and functions for finding, changing, viewing, and using them\ --- and styled text elements (e.g., for marking, underlining, or plotting colored titles) in\ [R](https://www.r-project.org/). 
 The package's pre-defined range of colors and text decoration functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), but can easily be adapted and extended to other purposes or institutions. 
 
 
-## Overview  
+### Overview
+
+<!-- Motivation    -->
 
 Many institutions devise and impose corporate designs (CDs) for creating and maintaining a consistent impression in presentations and publications. 
 Even when writing an article or thesis, it usually makes sense to define some graphical elements (e.g., a color scheme) and use them consistently throughout a project. 
@@ -85,7 +88,7 @@ Essentially, the **unikn** package began by defining some colors, but has now gr
 As we had fun creating it, we hope that you enjoy using it as well! 
 
 
-## Installation
+### Installation
 
 The latest release of **unikn** is available from [CRAN](https://CRAN.R-project.org/) at <https://CRAN.R-project.org/package=unikn>:
 
