--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,11 @@ knitr::opts_chunk$set(collapse = TRUE,
                       out.width = "600")
 
 library(unikn)  # load package
+
+# URLs:
+# unicol: 
+url_unicol_cran   <- "" # "https://CRAN.R-project.org/package=unicol"
+url_unicol_github <- "https://github.com/hneth/unicol"
 ```
 
 
@@ -24,6 +29,7 @@ library(unikn)  # load package
 [![Downloads/month](https://cranlogs.r-pkg.org/badges/unikn)](https://www.r-pkg.org/pkg/unikn)
 [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7096191.svg)](https://doi.org/10.5281/zenodo.7096191) 
 <!-- Devel badges end. -->
+
 
 
 <!-- Release badges start: -->
@@ -230,38 +236,42 @@ seecol(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
 ### Additional color palettes
 
 In addition to the 16\ specific color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), 
-**unikn** currently provides color palettes of the following institutions:
+former versions of **unikn** provided color palettes of many other institutions. 
+As the number of color palettes has been growing beyond the scope of this package, the color palettes from other institutions are now being collected in a separate R\ package **unicol**. 
+Installing **unicol** (from [GitHub](`r url_unicol_github`)) currently provides access to a range of over 150\ color palettes. 
 
-- [Caltech](https://www.caltech.edu/): `caltech_pal_1`, `caltech_pal_2`, `caltech_pal_3` 
-- [ETH Zurich](https://ethz.ch/): `eth_pal_1`, `eth_pal_2`, `eth_pal_3` 
-- [Free University Berlin](https://www.fu-berlin.de/en/index.html): `fu_pal_0`, `fu_pal_1`, `fu_pal_2`, `fu_pal_3` 
-- [Humboldt University Berlin](https://www.hu-berlin.de/en): `hu_pal_1`, `hu_pal_2` 
-- [LMU Munich](https://www.lmu.de/en/index.html): `lmu_pal_1`, `lmu_pal_2`, `lmu_pal_3` 
-- [Max Planck Society](https://www.mpg.de/en): `mpg_pal` 
-- [University of Bonn](https://www.uni-bonn.de/en): `uni_bonn_1`, `uni_bonn_2` 
-- [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_0`, `uni_freiburg_1`, `uni_freiburg_2`,   
-  (from\ 2022: `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`) 
-- [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3` 
-- [University of Hamburg](https://www.uni-hamburg.de/): `uni_hamburg_1`, `uni_hamburg_2` 
-- [University of Jena](https://www.uni-jena.de/): `uni_jena_1`, `uni_jena_2` 
-- [Kiel University](https://www.uni-kiel.de/en/): `uni_kiel_1`, `uni_kiel_2` 
-- [University of Köln](https://www.uni-koeln.de/): `uni_koeln_1`, `uni_koeln_2` 
-- [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz_1`, `uni_konstanz_2` 
-- [University of Mannheim](https://www.uni-mannheim.de/): `uni_mannheim_1`, `uni_mannheim_2` 
-- [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
-- [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3` 
-- [University of Ulm](https://www.uni-ulm.de/): `uni_ulm_1`, `uni_ulm_2` 
-- [Rensselaer Polytechnic Institute](https://www.rpi.edu/): `rpi_pal_1`, `rpi_pal_2`, `rpi_pal_3`
-- [RPTU Kaiserslautern-Landau](https://rptu.de/): `rptu_pal` 
+<!-- OLDER parts: List of additional color palettes -->
+
+<!-- - [Caltech](https://www.caltech.edu/): `caltech_pal_1`, `caltech_pal_2`, `caltech_pal_3`  -->
+<!-- - [ETH Zurich](https://ethz.ch/): `eth_pal_1`, `eth_pal_2`, `eth_pal_3`  -->
+<!-- - [Free University Berlin](https://www.fu-berlin.de/en/index.html): `fu_pal_0`, `fu_pal_1`, `fu_pal_2`, `fu_pal_3`  -->
+<!-- - [Humboldt University Berlin](https://www.hu-berlin.de/en): `hu_pal_1`, `hu_pal_2`  -->
+<!-- - [LMU Munich](https://www.lmu.de/en/index.html): `lmu_pal_1`, `lmu_pal_2`, `lmu_pal_3`  -->
+<!-- - [Max Planck Society](https://www.mpg.de/en): `mpg_pal`  -->
+<!-- - [University of Bonn](https://www.uni-bonn.de/en): `uni_bonn_1`, `uni_bonn_2`  -->
+<!-- - [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_0`, `uni_freiburg_1`, `uni_freiburg_2`,    -->
+<!--   (from\ 2022: `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`)  -->
+<!-- - [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3`  -->
+<!-- - [University of Hamburg](https://www.uni-hamburg.de/): `uni_hamburg_1`, `uni_hamburg_2`  -->
+<!-- - [University of Jena](https://www.uni-jena.de/): `uni_jena_1`, `uni_jena_2`  -->
+<!-- - [Kiel University](https://www.uni-kiel.de/en/): `uni_kiel_1`, `uni_kiel_2`  -->
+<!-- - [University of Köln](https://www.uni-koeln.de/): `uni_koeln_1`, `uni_koeln_2`  -->
+<!-- - [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz_1`, `uni_konstanz_2`  -->
+<!-- - [University of Mannheim](https://www.uni-mannheim.de/): `uni_mannheim_1`, `uni_mannheim_2`  -->
+<!-- - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2`  -->
+<!-- - [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3`  -->
+<!-- - [University of Ulm](https://www.uni-ulm.de/): `uni_ulm_1`, `uni_ulm_2`  -->
+<!-- - [Rensselaer Polytechnic Institute](https://www.rpi.edu/): `rpi_pal_1`, `rpi_pal_2`, `rpi_pal_3` -->
+<!-- - [RPTU Kaiserslautern-Landau](https://rptu.de/): `rptu_pal`  -->
 
 <!-- Note: Duplicate image in vignette color_inst.Rmd -->
 
-```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = 2.0}
+```{r seecol-add-pals, echo = FALSE, eval = FALSE, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = 2.0}
 # Inspect additional/alternative color palettes:
 seecol("add")
 ```
 
-These 52\ palettes are exported (as named vectors), documented (to credit their contributors and sources), and can easily be used and modified by the R community (e.g., in visualizations).
+<!-- These 52\ palettes are exported (as named vectors), documented (to credit their contributors and sources), and can easily be used and modified by the R community (e.g., in visualizations). -->
 
 
 <!-- Collecting contributed color palettes: -->
@@ -308,9 +318,9 @@ Using `seecol()` on an individual color palette provides a quick overview over i
 
 ```{r seecol-pref, fig.width = 7, out.width = "550px", fig.align = 'center', fig.asp = .80}
 # Inspect an individual color palette:
-seecol(pal = eth_pal_1,                    # a color palette / list of palettes / keyword
+seecol(pal = pal_pinky,                    # a color palette / list of palettes / keyword
        col_brd = "white", lwd_brd = 5,     # color and width of borders
-       main = "Colors of the ETH Zurich")  # plot title 
+       main = "Pinky colors of the University of Konstanz")  # plot title 
 ```
 
 #### Comparing color palettes {-}
@@ -404,7 +414,7 @@ ggplot(my_data, aes(x = X, y = Y, fill = Group)) +
 The `demopal()` function provides a quick illustration of a pre-defined or modified color palette:
 
 ```{r demopal, fig.width = 6, out.width = "500px", fig.asp = .75, fig.align = 'center', collapse = TRUE}
-demopal(usecol(uni_princeton_1, n = 7),  # use a modified color palette
+demopal(usecol(pal_unikn_light, n = 7),  # use a modified color palette
         type = "curve", seed = 2)        # reproducible randomness
 ```
 
@@ -455,10 +465,10 @@ The `simcol()` and `grepal()` functions of **unikn** address both situations.
 
 #### Finding similar colors with `simcol()`
 
-- Which R colors are similar to the "Princeton orange" of the `uni_princeton_0` palette?
+- Which R colors are similar to the color\ `Pinky` (or `pinky4` of the `pal_pinky` palette)? 
 
 ```{r simcol-example, fig.width = 5, out.width = "500px", fig.asp = .9, fig.align = 'center'}
-simcol(col_target = uni_princeton_0["Princeton orange"], tol = 30)
+simcol(col_target = Pinky, tol = 30)
 ```
 
 By default, `simcol()` considers all unique named `colors()` of\ R, but its search range can be adjusted by its `col_candiates`, `tol`, and `distinct` arguments. 
