--- a/README.Rmd
+++ b/README.Rmd
@@ -54,7 +54,6 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 -->
 
 
-
 # unikn `r packageVersion('unikn')` <img src = "./inst/pix/unikn.png" align = "right" alt = "unikn::" width = "150px" />
 
 <!-- unikn pkg logo and link: --> 
@@ -244,8 +243,9 @@ seecol(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
 
 In addition to the 16\ specific color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), 
 former versions of **unikn** provided color palettes of many other institutions. 
+
 As the number of color palettes has been growing beyond the scope of this package, the color palettes from other institutions are now being collected in a separate R\ package **unicol**. 
-Installing **unicol** (from [GitHub](`r url_unicol_github`)) currently provides access to a range of over 150\ color palettes. 
+Installing **unicol** (from [GitHub](`r url_unicol_github`)) currently provides access to a diverse range of over 200\ color palettes. 
 
 <!-- OLDER parts: List of additional color palettes -->
 
@@ -293,16 +293,15 @@ We are currently expanding the range of color palettes from other institutions:
 
 If so, please **let us know** (e.g., by posting on this [GitHub issue](https://github.com/hneth/unikn/issues/11))!  
   
-We collect color palettes from other institutions to make them available to R users in future versions of **unikn**.  
-   
-To enable us to verify and provide appropriate credit to your contributions, please provide us with the following information:  
+We collect color palettes from other institutions to make them available to R users in future versions of **[unicol](`r url_unicol_github`)**.  
+
+To enable us to verify and provide credit to your contributions, please send us the following information:  
    
 1. your code (e.g., the `newpal()` command creating your color palette),   
-2. your source (e.g., some URL with color definitions),   
+2. your reference or source information (e.g., some URL with color definitions),   
 3. your name and some contact information (e.g., an Email address).  
   
 We're looking forward to your inputs and contributions! 
-
 
 
 ## Color-related functions
@@ -707,7 +706,7 @@ We aim for an authentic representation of a highly-specified corporate design. W
 
 <!-- Text with links: --> 
 
-<span xmlns:dct="https://purl.org/dc/terms/" property="dct:title"><strong>unikn</strong></span> by <a xmlns:cc="https://creativecommons.org/ns#" href="https://github.com/hneth/unikn" property="cc:attributionName" rel="cc:attributionURL">Hansjörg Neth and Nico Gradwohl</a> is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>. (Based on a work at <a xmlns:dct="https://purl.org/dc/terms/" href="https://github.com/hneth/unikn" rel="dct:source">https://github.com/hneth/unikn</a>).
+<span xmlns:dct="https://purl.org/dc/terms/" property="dct:title"><strong>unikn</strong></span> (created by <a xmlns:cc="https://creativecommons.org/ns#" href="https://github.com/hneth/unikn" property="cc:attributionName" rel="cc:attributionURL">Hansjörg Neth and Nico Gradwohl</a>) is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>. (Based on a work at <a xmlns:dct="https://purl.org/dc/terms/" href="https://github.com/hneth/unikn" rel="dct:source">https://github.com/hneth/unikn</a>).
 
 
 ### Citation and References
