--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Institutional colors"
 author: "SPDS, uni.kn"
-date: "2023 07 28"
+date: "2023 08 09"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -274,6 +274,28 @@ seecol(list(mpg_pal, pal_unikn), n = 7,
 ```
 
 See the vignette on [Color recipes](color_recipes.html) for additional examples of using **unikn** functions for solving color-related tasks. 
+
+
+<!-- Collecting contributed color palettes (in unicol): -->
+
+## Call for contributions
+
+We are still expanding the range of color palettes from other institutions in a dedicated R\ package **[unicol](`r url_unicol_github`)**. 
+
+**Collecting color palettes**
+
+- Are you using the **unikn** color functions to create **your own color palettes**? 
+
+If so, please **let us know** (e.g., by posting on this [GitHub issue](https://github.com/hneth/unicol/issues/30))!   
+We collect color palettes from other institutions to make them available to R users in future versions of **[unicol](`r url_unicol_github`)**. 
+
+To enable us to verify and provide credit to your contributions, please send us the following information:  
+   
+1. your code (e.g., the `newpal()` command creating your color palette),   
+2. your reference or source information (e.g., some URL with color definitions),   
+3. your name and some contact information (e.g., an Email address).  
+  
+We're looking forward to your inputs and contributions (at this [GitHub issue](https://github.com/hneth/unicol/issues/30))! 
 
 
 
